# simple-tuner-and-metronome

./: .gitignore  build.gradle.kts  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/pitchandmetronome/: MainActivity.kt  PitchAndMetronomeApp.kt
app/src/main/java/com/pitchandmetronome/audio/metronome/: IMetronomeEngine.kt  MetronomeEngineImpl.kt
app/src/main/java/com/pitchandmetronome/audio/tuner/: AudioCaptureEngine.kt  IPitchDetector.kt  PitchDetector.kt  PitchDetectorImpl.kt
app/src/main/java/com/pitchandmetronome/core/audio/: AudioEngineConfig.kt
app/src/main/java/com/pitchandmetronome/core/di/: AppModule.kt  AudioModule.kt  RepositoryModule.kt
app/src/main/java/com/pitchandmetronome/core/utils/: CoroutineDispatchers.kt  FrequencyUtils.kt
app/src/main/java/com/pitchandmetronome/data/preferences/: PreferencesKeys.kt
app/src/main/java/com/pitchandmetronome/data/repository/: MetronomeRepositoryImpl.kt  ThemeRepositoryImpl.kt  (+2 more)
app/src/main/java/com/pitchandmetronome/metronome/: MetronomeUiState.kt  MetronomeViewModel.kt
app/src/main/java/com/pitchandmetronome/onboarding/: OnboardingViewModel.kt
app/src/main/java/com/pitchandmetronome/tuner/: TunerUiState.kt  TunerViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_metronome.xml  ic_tuning_fork.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
docs/: ARCHITECTURE.md
gradle/: libs.versions.toml
(+37 files in other folders)
